WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179729
[Cairo] Clang warns about mismatched declaration type tag for GraphicsContextState
https://bugs.webkit.org/show_bug.cgi?id=179729
Summary
[Cairo] Clang warns about mismatched declaration type tag for GraphicsContext...
Adrian Perez
Reported
2017-11-15 06:34:19 PST
The warning itself should be harmless, but it pops a few times during compilation and we would rather have build output as clean as possible. Warning message follows. --- In file included from DerivedSources/WebCore/unified-sources/UnifiedSource332.cpp:2: In file included from ../../Source/WebCore/platform/graphics/cairo/CairoOperations.cpp:34: ../../Source/WebCore/platform/graphics/cairo/CairoOperations.h:51:1: warning: class 'GraphicsContextState' was previously declared as a struct [-Wmismatched-tags] class GraphicsContextState; ^ ../../Source/WebCore/platform/graphics/GraphicsContext.h:116:8: note: previous use is here struct GraphicsContextState { ^ ../../Source/WebCore/platform/graphics/cairo/CairoOperations.h:51:1: note: did you mean struct here? class GraphicsContextState; ^~~~~ struct
Attachments
Patch
(1.36 KB, patch)
2017-11-15 06:36 PST
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
Patch
(1.41 KB, patch)
2017-11-15 07:45 PST
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2017-11-15 06:36:37 PST
Created
attachment 326980
[details]
Patch
Michael Catanzaro
Comment 2
2017-11-15 07:39:24 PST
Comment on
attachment 326980
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=326980&action=review
> Source/WebCore/platform/graphics/cairo/CairoOperations.h:51 > +struct GraphicsContextState;
I think it should follow the class declarations, with a blank line in between.
Adrian Perez
Comment 3
2017-11-15 07:44:02 PST
(In reply to Michael Catanzaro from
comment #2
)
> Comment on
attachment 326980
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=326980&action=review
> > > Source/WebCore/platform/graphics/cairo/CairoOperations.h:51 > > +struct GraphicsContextState; > > I think it should follow the class declarations, with a blank line in > between.
TBH, I was surprised that the style checker didn't complain now that there's both “class” and “struct” mixed in a block of forward declarations. Let's try your suggestion and see whether it will complain or accept it ;-)
Adrian Perez
Comment 4
2017-11-15 07:45:22 PST
Created
attachment 326983
[details]
Patch
WebKit Commit Bot
Comment 5
2017-11-15 10:06:09 PST
Comment on
attachment 326983
[details]
Patch Clearing flags on attachment: 326983 Committed
r224882
: <
https://trac.webkit.org/changeset/224882
>
WebKit Commit Bot
Comment 6
2017-11-15 10:06:10 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2017-11-15 12:06:10 PST
<
rdar://problem/35566940
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug