[Cairo] Clang warns about mismatched declaration type tag for GraphicsContextState https://bugs.webkit.org/show_bug.cgi?id=179729

Reviewed by Michael Catanzaro.

No new tests needed.

* platform/graphics/cairo/CairoOperations.h: Make the forward declaration use "struct"
as the actual implementation of the type does.


Canonical link: https://commits.webkit.org/195762@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224882 268f45cc-cd09-0410-ab3c-d52691b4dbfc